East Sussex: Fix display of languages in footer on mobile

--- a/web/cobrands/eastsussex/base.scss
+++ b/web/cobrands/eastsussex/base.scss
@@ -118,3 +118,13 @@ body > p {
         }
     }
 }
+
+.footer .languages ul {
+    padding: 0;
+    margin: 0;
+
+    li {
+        display: inline-block;
+        float: none !important;
+    }
+}
